--- a/ServiceCenterAccounting/Initial_Setup.resx
+++ b/ServiceCenterAccounting/Initial_Setup.resx
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="l_Text1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <data name="l_Text1.Text" xml:space="preserve">
     <value>      Добро пожаловать в программу ServiceCenterAccounting!
 Программа запущена в первый раз. Вам потреуется выполнить 
@@ -130,46 +127,24 @@
 Нажмите крнопку "Далее" для продолжения настройки.
 Нажмите кнопку "Отмена" для выхода из программы.</value>
   </data>
-  <metadata name="btn_Further.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="btn_Cancel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="btn_Back.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="tb_Name_Srvice.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="tb_Addres_Service.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="tb_Phone_Service.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="l_Input_Text2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="l_Input_Text3.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="l_Input_Text1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="l_Warning1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="l_Warning2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="l_Warning3.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="l_Text2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
+  <data name="l_Text2.Text" xml:space="preserve">
+    <value>                  Введите основную информацию о сервисе.
+Название сервиса может содержать любые символы. Адрес может 
+содержать лишь сиволы русского алфавита и cледующие символы:
+ " . " " , " " - ", "`  ", " ' ", " / ". Телфон может быть записан разными 
+способами однако рекомендуется использовать следующий способ
+ "+38(071)-XXX-XX-XX".  Все поля не могут быть пустыми или начинатся 
+с пробелов.
+</value>
+  </data>
+  <data name="l_Text3.Text" xml:space="preserve">
+    <value>Сейчас вам необходимо задать название базы данных, логин и пароль 
+админимтратора. Название базы данных может содержать лишь 
+английские буквы и арабские цифры. Логин и пароль администратора 
+также могут содержать лишь английские буквы и цифры. Также вам 
+необходимо повторить пароль администратора, чтобы его подтвердить. 
+Пожалуйста проследите за уникальностью вводимых 
+данных!!! 
+</value>
+  </data>
 </root>
