Предварительная выгрузка "Главной формы" и "Формы первого запуска" [5]

--- a/ServiceCenterAccounting/Initial_Setup.resx
+++ b/ServiceCenterAccounting/Initial_Setup.resx
@@ -147,4 +147,11 @@
 данных!!! 
 </value>
   </data>
+  <data name="l_Text4.Text" xml:space="preserve">
+    <value>                                        Заполните таблицу типов услуг.
+Наименование типа услуги может содержать лишь символы русского 
+алффвита и следующие символы " . ",  " , ",  " - ", "`  ", " ' ", " / ". Стоимость 
+услуги указывается целым числом или десятичной дробью. Поля не могут 
+быть пустыми или начинаться с пробелов.</value>
+  </data>
 </root>
