Предварительная выгрузка "Главной формы" и "Формы первого запуска" [6]

--- a/ServiceCenterAccounting/Initial_Setup.resx
+++ b/ServiceCenterAccounting/Initial_Setup.resx
@@ -143,15 +143,25 @@
 английские буквы и арабские цифры. Логин и пароль администратора 
 также могут содержать лишь английские буквы и цифры. Также вам 
 необходимо повторить пароль администратора, чтобы его подтвердить. 
-Пожалуйста проследите за уникальностью вводимых 
-данных!!! 
-</value>
+Пожалуйста проследите за уникальностью вводимых данных!
+Запомните логин и пароль администратора, восстановить их будет
+невозможно!</value>
   </data>
   <data name="l_Text4.Text" xml:space="preserve">
-    <value>                                        Заполните таблицу типов услуг.
-Наименование типа услуги может содержать лишь символы русского 
-алффвита и следующие символы " . ",  " , ",  " - ", "`  ", " ' ", " / ". Стоимость 
-услуги указывается целым числом или десятичной дробью. Поля не могут 
-быть пустыми или начинаться с пробелов.</value>
+    <value>                                      Введите логин и пароль опрератора.
+Логин и пароль опрератора могут содержать лишь английские буквы
+и цифры. Также вам необходимо повторить пароль администратора, 
+чтобы его подтвердить. 
+Пожалуйста проследите за уникальностью вводимых данных!!!
+Запомните логин и пароль администратора, восстановить их будет
+невозможно!
+</value>
+  </data>
+  <data name="l_Text5.Text" xml:space="preserve">
+    <value>                           Основная настройка программы завершена.
+Для добавления работников, типов услуг, и изменения некоторых настроек 
+перейдите в настройки программы на главном окне программы.
+Вы можете перейти к работе с программой нажав кнопку "Готово", или закрыть 
+эту форму и продолжить позже нажав кнопку "Закрыть".  </value>
   </data>
 </root>
